# openstack-manuals

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  README.rst  RELEASENOTES.rst  bindep.txt  doc-test-exceptions.txt  doc-test.conf  doc-tools-check-languages.conf  projects.txt  test-requirements.txt  tox.ini  zendesk_doc_list  zendesk_doc_list.yml
doc/api-quick-start/: setup.cfg  setup.py
doc/api-quick-start/source/: api-quick-start.rst  conf.py  index.rst
doc/arch-design/: bk-openstack-arch-design.xml  ch_compute_focus.xml  ch_generalpurpose.xml  ch_glossary.xml  ch_hybrid.xml  ch_introduction.xml  ch_legal-security-requirements.xml  ch_massively_scalable.xml  ch_multi_site.xml  ch_network_focus.xml  ch_references.xml  ch_specialized.xml  ch_storage_focus.xml  pom.xml  setup.cfg
doc/arch-design/compute_focus/: section_architecture_compute_focus.xml  section_introduction_compute_focus.xml  section_operational_considerations_compute_focus.xml  section_prescriptive_examples_compute_focus.xml  section_tech_considerations_compute_focus.xml  section_user_requirements_compute_focus.xml
doc/arch-design/figures/: arch-design.graffle
doc/arch-design/generalpurpose/: section_architecture_general_purpose.xml  section_introduction_generalpurpose.xml  section_operational_considerations_general_purpose.xml  section_prescriptive_example_general_purpose.xml  section_tech_considerations_general_purpose.xml  section_user_requirements_general_purpose.xml
doc/arch-design/hybrid/: section_architecture_hybrid.xml  section_introduction_hybrid.xml  section_operational_considerations_hybrid.xml  section_prescriptive_examples_hybrid.xml  section_tech_considerations_hybrid.xml  section_user_requirements_hybrid.xml
doc/arch-design/images/: arch-design.graffle
doc/arch-design/introduction/: section_how_this_book_is_organized.xml  section_how_this_book_was_written.xml  section_intended_audience.xml  section_introduction_to_openstack_architecture_design_guide.xml  section_methodology.xml
doc/arch-design/locale/: arch-design.pot  zh_CN.po
doc/arch-design/massively_scalable/: section_introduction_massively_scalable.xml  section_operational_considerations_massively_scalable.xml  (+2 more)
doc/glossary/: glossary-terms.xml  openstack-glossary.xml  openstack.ent  pom.xml  setup.cfg  setup.py
doc/glossary/locale/: ar.po  (+63 more)
doc/image-guide/: bk-imageguide.xml  ch_converting.xml  ch_creating_images_automatically.xml  ch_creating_images_manually.xml  ch_introduction.xml  ch_modifying_images.xml  ch_obtaining_images.xml  ch_openstack_images.xml  pom.xml  roadmap.rst  section_centos-example.xml  section_fedora-example.xml  section_freebsd-example.xml  section_glance-image-metadata.xml  section_glance_image-formats.xml  section_ubuntu-example.xml  section_windows-example.xml  setup.cfg
doc/install-guide-debconf/: setup.cfg
doc/networking-guide/: bk-networking.xml  ch_advanced.xml  ch_debugging.xml  ch_deployment.xml  ch_intro.xml  ch_networking-architecture.xml  ch_networking-data-model.xml  ch_plugins.xml  ch_scalability-HA.xml  ch_troubleshooting.xml  conf.py  intro_network_namespaces.rst  intro_networking.rst  intro_networking_components.rst  intro_tunnel_technologies.rst  pom.xml  roadmap.rst  section_architecture-agents.xml  section_architecture-overview.xml  section_architecture-plug-in.xml  section_architecture-server.xml  section_deployment-architecture.xml  section_deployment-authentication.xml  section_deployment-scenarios.xml  section_ha-dhcp.xml  section_ha-dvr.xml  section_ha-l3.xml  section_intro-firewalls.xml  section_intro-layers.xml  section_intro-namespaces.xml  section_intro-neutron.xml  section_intro-routers.xml  section_intro-switches.xml  section_intro-tunnel.xml  section_networking_adv_agent.xml  section_networking_adv_features.xml  section_networking_adv_operational_features.xml  section_plugins-ml2.xml  section_plugins-proprietary.xml  section_sr-iov_networking.xml  (+1 more)
(+8766 files in other folders)
