[metadata]
name = OpenStack API Documentation
summary = OpenStack API Documentation
description-file =
    README.rst
author = OpenStack Documentation
author-email = openstack-docs@lists.openstack.org
home-page = https://developer.openstack.org/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License

[build_sphinx]
all_files = 1
build-dir = build
source-dir = source

[pbr]
warnerrors = True

[wheel]
universal = 1
