[metadata]
name = openstackdocumentationglossary
summary = OpenStack Documentation Glossary
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: Documentation Contributors
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Topic :: Documentation

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]

[build_sphinx]
warning-is-error = 1
build-dir = build
source-dir = source

[wheel]
universal = 1
