[metadata]
name = virtualmachineimageguide
summary = OpenStack Virtual Machine Image Guide
author = OpenStack
author-email = openstack-docs@lists.openstack.org
home-page = https://docs.openstack.org/
classifier =
Environment :: OpenStack
Intended Audience :: Information Technology
Intended Audience :: Cloud Architects
License :: OSI Approved :: Apache Software License
Operating System :: POSIX :: Linux
Topic :: Documentation

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]

[build_sphinx]
warning-is-error = 1
source-dir = source
build-dir = build

[wheel]
universal = 1
