[metadata]
name = openstacknetworkingguide
summary = OpenStack Networking Guide
author = OpenStack
author-email = openstack-docs@lists.openstack.org
home-page = https://docs.openstack.org/
classifier =
Environment :: OpenStack
Intended Audience :: Information Technology
Intended Audience :: System Administrators
License :: OSI Approved :: Apache Software License
Operating System :: POSIX :: Linux
Topic :: Documentation

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]

[build_sphinx]
all_files = 1
build-dir = build
source-dir = source

[wheel]
universal = 1

[pbr]
warnerrors = True
